[package]
name = "game_off_2025"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = {version="0.17.2", features=["wav"]}
rand = "0.9.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
